# Community_Of_Practice_Session_Two

./: .flaskenv  .gitignore  .gitingore  .pre-commit-config.yaml  01_version_control  01_version_control.md  02_getting_started_git.md  03_docker.md  Dockerfile  LICENSE  README.md  analysis.py  boot.sh  getting_started_docker.md  pyproject.toml  requirements.txt
01_Docs/: 02_getting_started_git.md
01_Docs_and_Git/: 01_version_control.md  02_getting_started_git.md  03_docker.md  04_getting_started_docker.md  README.md
02_Notebook_and_Pipenv/: Pipfile  README.md  requirements.txt
02_Notebook_and_Pipenv/notebooks/: process.ipynb  uhs-press-release-text-analysis.ipynb
03_Python_App/: analysis.py
03_Python_App_and_Poetry/: .gitignore  README.md  analysis.py  pyproject.toml  requirements.txt
03_Python_App_and_Poetry/app/: decision_tree.py  generic_model.py  logistic_reg.py  model_setup.py  pre_process.py  random_forest.py  routes.py
03_Python_App_and_Poetry/app/data_processing/: pre_process.py
03_Python_App_and_Poetry/app/modelling/: decision_tree.py  generic_model.py  logistic_reg.py  random_forest.py
03_Python_App_and_Poetry/app/static/: decision_tree_features.html  logistic_regression_features.html
03_Python_App_and_Poetry/app/templates/: dt_page.html  index.html  log_page.html  rf_page.html
03_Python_App_and_Poetry/tests/: test_webapp.py
04_Containerised_App/: .gitignore  Dockerfile  README.md  boot.sh  requirements.txt
04_Docker_App/: .flaskenv
app/: decision_tree.py  generic_model.py  logistic_reg.py  pre_process.py  random_forest.py  routes.py
(+22 files in other folders)
